--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,20 @@
-name: C++ CI 
-on: [push, pull_request] 
-jobs: 
-build-and-test: 
-runs-on: ubuntu-latest 
-steps: - name: Checkout code 
-uses: actions/checkout@v3 - name: Install dependencies 
-run: | 
-sudo apt-get update 
-sudo apt-get install -y cmake g++ libgtest-dev - name: Configure CMake 
-run: cmake -B build -DCMAKE_BUILD_TYPE=Release - name: Build 
-run: cmake --build build --config Release --parallel 2 - name: Run Tests 
-run: | 
-cd build 
-ctest --output-on-failure
+name: CMake + CTest
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install -y cmake g++ ninja-build
+      - name: Configure
+        run: cmake -S rpn_calculator -B build -G Ninja -DCMAKE_BUILD_TYPE=Release
+      - name: Build
+        run: cmake --build build --parallel
+      - name: Test
+        run: ctest --output-on-failure --test-dir build
